# smartbridge-setup

./: README.md  package-lock.json  package.json
scripts/: build_setup_dmg.sh
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/secrets/: serial_salt.rs
src-tauri/src/: commands.rs  download.rs  host.rs  lib.rs  license.rs  local_repo.rs  logging.rs  main.rs  manifest.rs  paths.rs  support_bundle.rs  wizard.rs
src-tauri/src/detection/: ai_lyrics.rs  ai_lyrics_default.rs  cubase.rs  help_files.rs  loopmidi.rs  main_app.rs  mod.rs  resources.rs  synthv.rs  yamaha_steinberg.rs
src-tauri/src/install/: ai_lyrics.rs  ai_lyrics_default.rs  clean_uninstall.rs  cubase.rs  help_files.rs  loopmidi.rs  main_app.rs  mod.rs  resources.rs  synthv.rs  yamaha_steinberg.rs  zip_util.rs
src-tauri/src/preflight/: basics.rs  dll_walk.rs  host_caches.rs  mod.rs  report.rs  selftest.rs  vcredist.rs
src-tauri/tests/: detection_smoke.rs  install_smoke.rs  local_repo_smoke.rs
src/lib/: api.ts  types.ts
src/lib/components/: InstallWizard.svelte  UninstallWizard.svelte  WizardShell.svelte
src/lib/i18n/: messages.ts
src/lib/styles/: global.css
src/routes/: +page.svelte
